--- a/README.org
+++ b/README.org
@@ -4,31 +4,51 @@ XMonad is a library for creating a tiling window manager in Haskell, a programmi
 
 ** Installation
 
-The installation instructions for this config currently live at [[/../../README.md][the root README file]] for this repository. It depends on certain scripts in https://github.con/quarkQuark/dotfiles/tree/master/.scripts as well as the following.
-- Required dependencies ::
+The installation instructions for this config currently live in my [[https://github.com/quarkQuark/dotfiles]] dotfiles repository. It depends on certain scripts in https://github.con/quarkQuark/dotfiles/tree/master/.scripts as well as the following.
+
+1. Dependencies
+
+  - Required :: =alacritty bc brightnessctl nitrogen redshift rofi spectacle network-manager network-manager-applet pasystray udiskie xcape xorg-xmodmap xorg-xrandr aur/deadd-notification-center aur/notify-send-py aur/stack-static aur/picom-ibhagwan-git=
+
+  - For xmobar :: =stalonetray xfce4-power-manager=
+  - For taffybar :: =lxqt-power-management=
+  - Not necessary for core functionality :: =dzen2 emacs pcmanfm qutebrowser ranger vivaldi zathura=
+
+  - Optional :: These programs are preferred for some functionality, but have fallbacks
+    #+begin_src sh
+      tmux  # Automatically runs in terminal scratchpad
+    #+end_src
+
+2. Install XMonad
+
   #+begin_src sh
-    alacritty
-    aur/deadd-notification-center  # Alternatively use `dunst`
-    bc
-    brightnessctl
-    nitrogen
-    aur/notify-send-py
-    redshift
-    rofi
-    spectacle
+    git clone git@github.com:quarkQuark/xmonad-quark $HOME/Projects/xmonad-quark
+    cd $HOME/Projects/xmonad-quark && stack install
+    cd $HOME/.config/taffybar && stack install
+    stack install xmobar
+    stack install status-notifier-item  # For taffybar's system tray
   #+end_src
-- Semi-optional dependencies :: Not necessary for core functionality, but necessary for certain keybindings to do anything
+
+  Then create the file =/usr/share/xsessions/xmonad.desktop= with the following contents:
+
+  #+begin_example conf
+    [Desktop Entry]
+    Encoding=UTF-8
+    Type=Application
+    Name=XMonad
+    Comment=Lightweight X11 tiling window manager written in Haskell
+    Exec=xmonad
+    Icon=xmonad
+    Terminal=false
+    StartupNotify=false
+    Categories=Application
+  #+end_example
+
+3. Download scripts
+
   #+begin_src sh
-    emacs
-    pcmanfm
-    qutebrowser
-    ranger
-    vivaldi
-    zathura
-  #+end_src
-- Optional dependencies :: These programs are preferred for some functionality, but have fallbacks
-  #+begin_src sh
-    tmux  # Automatically runs in terminal scratchpad
+    git clone git@github.com:quarkQuark/scripts $HOME/.scripts/repo
+    cp $HOME/Projects/xmonad-quark/scripts/* $HOME/.scripts
   #+end_src
 
 ** Keybindings
